# distributedhardware_mechbody_controller

./: AGENTS.md  OAT.xml  README.OpenSource  README.md  README_zh.md  bundle.json  mechbody.gni
interface/ets/mech_manager/: BUILD.gn  export_symbols.map
interface/napi/mech_manager/: BUILD.gn  export_symbols.map  js_mech_manager.cpp  js_mech_manager.h  js_mech_manager_client.cpp  js_mech_manager_client.h  js_mech_manager_service.cpp  js_mech_manager_service.h  js_mech_manager_stub.cpp  js_mech_manager_stub.h  js_mech_menager_interface.h
services/: BUILD.gn  pr.rar  rom.rar
services/include/: ble_send_manager.h  mechbody_controller_enums.h  mechbody_controller_interface.h  mechbody_controller_ipc_interface_code.h  mechbody_controller_log.h  mechbody_controller_service.h  mechbody_controller_stub.h  mechbody_controller_types.h  mechbody_controller_utils.h
services/include/connect/: bluetooth_state_adapter.h  bluetooth_state_listener.h  mc_connect_manager.h
services/include/controller/: mc_camera_tracking_controller.h  mc_controller_ipc_death_listener.h  mc_controller_manager.h
services/include/dotReport/: hisysevent_utils.h
services/include/motion/: mc_motion_manager.h
services/include/transport/: mc_data_buffer.h  mc_event_listener.h  mc_protocol_convertor.h  mc_send_adapter.h  mc_subscription_center.h
services/include/utils/: load_mechbody_adapter.h  notification_utils.h  resource_manager_utils.h  subscribe_event_utils.h
services/src/: ble_send_manager.cpp  mechbody_controller_service.cpp  mechbody_controller_stub.cpp  mechbody_controller_utils.cpp
services/src/connect/: bluetooth_state_adapter.cpp  bluetooth_state_listener.cpp  mc_connect_manager.cpp
services/src/controller/: mc_camera_tracking_controller.cpp  mc_controller_ipc_death_listener.cpp  mc_controller_manager.cpp
services/src/dotReport/: hisysevent_utils.cpp
services/src/motion/: mc_motion_manager.cpp
services/src/transport/: mc_data_buffer.cpp  mc_protocol_convertor.cpp  mc_send_adapter.cpp  mc_subscription_center.cpp
services/src/utils/: load_mechbody_adapter.cpp  notification_utils.cpp  resource_manager_utils.cpp  subscribe_event_utils.cpp
test/fuzztest/: BUILD.gn  fuzz10.rar  fuzz3.rar  fuzz5.rar  fuzz7.rar  fuzz8.rar  fuzz9.rar  project4.rar
test/fuzztest/blesendmanager_fuzzer/: BUILD.gn  blesendmanager_fuzzer.cpp  blesendmanager_fuzzer.h
test/fuzztest/blesendmanagerfive_fuzzer/: BUILD.gn  blesendmanagerfive_fuzzer.cpp  blesendmanagerfive_fuzzer.h
test/fuzztest/blesendmanagerfour_fuzzer/: BUILD.gn  blesendmanagerfour_fuzzer.cpp  blesendmanagerfour_fuzzer.h
test/fuzztest/blesendmanagerone_fuzzer/: BUILD.gn  blesendmanagerone_fuzzer.cpp  blesendmanagerone_fuzzer.h
test/fuzztest/blesendmanagersix_fuzzer/: BUILD.gn  blesendmanagersix_fuzzer.cpp  blesendmanagersix_fuzzer.h
test/fuzztest/blesendmanagerthree_fuzzer/: BUILD.gn  blesendmanagerthree_fuzzer.cpp  blesendmanagerthree_fuzzer.h
test/fuzztest/blesendmanagertwo_fuzzer/: BUILD.gn  blesendmanagertwo_fuzzer.cpp  blesendmanagertwo_fuzzer.h
test/fuzztest/bluetoothstateadapter_fuzzer/: BUILD.gn  bluetoothstateadapter_fuzzer.cpp  bluetoothstateadapter_fuzzer.h
test/fuzztest/bluetoothstatelistener_fuzzer/: BUILD.gn  bluetoothstatelistener_fuzzer.cpp  bluetoothstatelistener_fuzzer.h
test/fuzztest/common/: mock_transport_send_adapter.h
test/fuzztest/hisyseventutils_fuzzer/: BUILD.gn  hisyseventutils_fuzzer.cpp  hisyseventutils_fuzzer.h
test/fuzztest/jsmechmanager_fuzzer/: BUILD.gn  jsmechmanager_fuzzer.cpp  jsmechmanager_fuzzer.h
test/fuzztest/loadmechbodyadapter_fuzzer/: BUILD.gn  loadmechbodyadapter_fuzzer.cpp  loadmechbodyadapter_fuzzer.h
test/fuzztest/mccameratrackingcontroller_fuzzer/: BUILD.gn  mccameratrackingcontroller_fuzzer.cpp
test/fuzztest/mccameratrackingcontrollerfive_fuzzer/: BUILD.gn  mccameratrackingcontrollerfive_fuzzer.cpp  mccameratrackingcontrollerfive_fuzzer.h
test/fuzztest/mccameratrackingcontrollerfour_fuzzer/: BUILD.gn  mccameratrackingcontrollerfour_fuzzer.cpp  mccameratrackingcontrollerfour_fuzzer.h
test/fuzztest/mccameratrackingcontrollerone_fuzzer/: BUILD.gn  mccameratrackingcontrollerone_fuzzer.cpp  mccameratrackingcontrollerone_fuzzer.h  project.xml
test/fuzztest/mccameratrackingcontrollerthree_fuzzer/: BUILD.gn  mccameratrackingcontrollerthree_fuzzer.cpp  mccameratrackingcontrollerthree_fuzzer.h  project.xml
test/fuzztest/mccameratrackingcontrollertwo_fuzzer/: BUILD.gn  mccameratrackingcontrollertwo_fuzzer.cpp  mccameratrackingcontrollertwo_fuzzer.h  project.xml
test/fuzztest/mccommandbase_fuzzer/: BUILD.gn  mccommandbase_fuzzer.cpp  mccommandbase_fuzzer.h  project.xml
test/fuzztest/mccommandfactory_fuzzer/: BUILD.gn  mccommandfactory_fuzzer.cpp  mccommandfactory_fuzzer.h  project.xml
test/fuzztest/mcconnectmanager_fuzzer/: BUILD.gn  mcconnectmanager_fuzzer.cpp  mcconnectmanager_fuzzer.h
test/fuzztest/mcconnectmanagerone_fuzzer/: BUILD.gn  mcconnectmanagerone_fuzzer.cpp  mcconnectmanagerone_fuzzer.h
test/fuzztest/mcconnectmanagerthree_fuzzer/: BUILD.gn  mcconnectmanagerthree_fuzzer.cpp  mcconnectmanagerthree_fuzzer.h
test/fuzztest/mcconnectmanagertwo_fuzzer/: BUILD.gn  mcconnectmanagertwo_fuzzer.cpp  mcconnectmanagertwo_fuzzer.h
test/fuzztest/mccontrollermanager_fuzzer/: BUILD.gn  mccontrollermanager_fuzzer.cpp  mccontrollermanager_fuzzer.h
test/fuzztest/mcdatabuffer_fuzzer/: BUILD.gn  mcdatabuffer_fuzzer.cpp  mcdatabuffer_fuzzer.h  project.xml
test/fuzztest/mcgetmechcameratrackinglayoutcmd_fuzzer/: BUILD.gn  mcgetmechcameratrackinglayoutcmd_fuzzer.cpp  mcgetmechcameratrackinglayoutcmd_fuzzer.h
test/fuzztest/mcgetmechlimitinfocmd_fuzzer/: BUILD.gn  mcgetmechlimitinfocmd_fuzzer.cpp  mcgetmechlimitinfocmd_fuzzer.h
test/fuzztest/mcgetmechprotocolvercmd_fuzzer/: BUILD.gn  project.xml  (+2 more)
test/unittest/: BUILD.gn  ble_send_manager_test.cpp  ble_send_manager_test.h  cfi_blocklist.txt  mechbody_controller_log.h  mechbody_controller_service_test.cpp  mechbody_controller_service_test.h  mechbody_controller_stub_test.cpp  mechbody_controller_stub_test.h  test_log.h
(+520 files in other folders)
