# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/distributedhardware/mechbody_controller/mechbody.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagerone_fuzzer:BleSendManagerOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagertwo_fuzzer:BleSendManagerTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagerthree_fuzzer:BleSendManagerThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccameratrackingcontroller_fuzzer:McCameraTrackingControllerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerserviceone_fuzzer:MechBodyControllerServiceOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicetwo_fuzzer:MechBodyControllerServiceTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicethree_fuzzer:MechBodyControllerServiceThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicefour_fuzzer:MechBodyControllerServiceFourFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicefive_fuzzer:MechBodyControllerServiceFiveFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicesix_fuzzer:MechBodyControllerServiceSixFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubone_fuzzer:MechBodyControllerStubOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubtwo_fuzzer:MechBodyControllerStubTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubthree_fuzzer:MechBodyControllerStubThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubfour_fuzzer:MechBodyControllerStubFourFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubfive_fuzzer:MechBodyControllerStubFiveFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerutils_fuzzer:MechBodyControllerUtilsFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/registermechcliffinfocmd_fuzzer:RegisterMechCliffInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/registermechobstacleinfocmd_fuzzer:RegisterMechObstacleInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelgetmechcapabilityinfocmd_fuzzer:WheelGetMechCapabilityInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelsetmechmotioncontrolcmd_fuzzer:WheelSetMechMotionControlCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelsetmechrelativepositioncmd_fuzzer:WheelSetMechRelativePositionCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelsetmechrotationtobasecmd_fuzzer:WheelSetMechRotationToBaseCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelsetmechrotationtracecmd_fuzzer:WheelSetMechRotationTraceCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelsetmechscenecontrolcmd_fuzzer:WheelSetMechSceneControlCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/hisyseventutils_fuzzer:HisyseventUtilsFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcdatabuffer_fuzzer:McDataBufferFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcprotocolconvertor_fuzzer:McProtocolConvertorFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsubscriptioncenter_fuzzer:McSubscriptionCenterFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccommandbase_fuzzer:McCommandBaseFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccommandfactory_fuzzer:McCommandFactoryFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsendadapter_fuzzer:McSendAdapterFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcgetmechprotocolvercmd_fuzzer:McGetMechProtocolVerCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsetmechdevicepairinginfocmd_fuzzer:McSetMechDevicePairingInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsetmechdisconnectcmd_fuzzer:McSetMechDisconnectCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/jsmechmanager_fuzzer:JsMechManagerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechmanagerinner_fuzzer:MechManagerInnerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechrotationbyspeedcmd_fuzzer:NormalSetMechRotationBySpeedCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechrotationtolocationcmd_fuzzer:NormalSetMechRotationToLocationCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechrotationtracecmd_fuzzer:NormalSetMechRotationTraceCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechphonestatuscmd_fuzzer:NormalSetMechPhoneStatusCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechprotocolvercmd_fuzzer:NormalSetMechProtocolVerCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/loadmechbodyadapter_fuzzer:LoadmechbodyadapterFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/resourcemanagerutils_fuzzer:ResourcemanagerutilsFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/subscribeeventutils_fuzzer:SubscribeeventutilsFuzzTest",
  ]
}