# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/distributedhardware/mechbody_controller/mechbody.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagerone_fuzzer:BleSendManagerOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagertwo_fuzzer:BleSendManagerTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagerthree_fuzzer:BleSendManagerThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagerfour_fuzzer:BleSendManagerFourFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagerfive_fuzzer:BleSendManagerFiveFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/blesendmanagersix_fuzzer:BleSendManagerSixFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccameratrackingcontroller_fuzzer:McCameraTrackingControllerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerserviceone_fuzzer:MechBodyControllerServiceOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicetwo_fuzzer:MechBodyControllerServiceTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicethree_fuzzer:MechBodyControllerServiceThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicefour_fuzzer:MechBodyControllerServiceFourFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicefive_fuzzer:MechBodyControllerServiceFiveFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerservicesix_fuzzer:MechBodyControllerServiceSixFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubone_fuzzer:MechBodyControllerStubOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubtwo_fuzzer:MechBodyControllerStubTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubthree_fuzzer:MechBodyControllerStubThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubfour_fuzzer:MechBodyControllerStubFourFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerstubfive_fuzzer:MechBodyControllerStubFiveFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechbodycontrollerutils_fuzzer:MechBodyControllerUtilsFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcconnectmanagerone_fuzzer:McConnectManagerOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcconnectmanagertwo_fuzzer:McConnectManagerTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcconnectmanagerthree_fuzzer:McConnectManagerThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/registermechcliffinfocmd_fuzzer:RegisterMechCliffInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/registermechobstacleinfocmd_fuzzer:RegisterMechObstacleInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelgetmechcapabilityinfocmd_fuzzer:WheelGetMechCapabilityInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelsetmechmotioncontrolcmd_fuzzer:WheelSetMechMotionControlCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelsetmechrelativepositioncmd_fuzzer:WheelSetMechRelativePositionCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelsetmechrotationtobasecmd_fuzzer:WheelSetMechRotationToBaseCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelsetmechrotationtracecmd_fuzzer:WheelSetMechRotationTraceCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/wheelsetmechscenecontrolcmd_fuzzer:WheelSetMechSceneControlCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/hisyseventutils_fuzzer:HisyseventUtilsFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcdatabuffer_fuzzer:McDataBufferFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcprotocolconvertor_fuzzer:McProtocolConvertorFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsubscriptioncenter_fuzzer:McSubscriptionCenterFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccommandbase_fuzzer:McCommandBaseFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mccommandfactory_fuzzer:McCommandFactoryFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsendadapter_fuzzer:McSendAdapterFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcgetmechprotocolvercmd_fuzzer:McGetMechProtocolVerCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsetmechdevicepairinginfocmd_fuzzer:McSetMechDevicePairingInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcsetmechdisconnectcmd_fuzzer:McSetMechDisconnectCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/jsmechmanager_fuzzer:JsMechManagerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mechmanagerinner_fuzzer:MechManagerInnerFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechrotationbyspeedcmd_fuzzer:NormalSetMechRotationBySpeedCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechrotationtolocationcmd_fuzzer:NormalSetMechRotationToLocationCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechrotationtracecmd_fuzzer:NormalSetMechRotationTraceCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechphonestatuscmd_fuzzer:NormalSetMechPhoneStatusCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalsetmechprotocolvercmd_fuzzer:NormalSetMechProtocolVerCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/loadmechbodyadapter_fuzzer:LoadmechbodyadapterFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/resourcemanagerutils_fuzzer:ResourcemanagerutilsFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/subscribeeventutils_fuzzer:SubscribeeventutilsFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/normalgetmechcapabilityinfocmd_fuzzer:NormalGetMechCapabilityInfoCmdFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagerone_fuzzer:McMotionManagerOneFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagertwo_fuzzer:McMotionManagerTwoFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagerthree_fuzzer:McMotionManagerThreeFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagerfour_fuzzer:McMotionManagerFourFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagerfive_fuzzer:McMotionManagerFiveFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagersix_fuzzer:McMotionManagerSixFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagerseven_fuzzer:McMotionManagerSevenFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagereight_fuzzer:McMotionManagerEightFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagernine_fuzzer:McMotionManagerNineFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagerten_fuzzer:McMotionManagerTenFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagereleven_fuzzer:McMotionManagerElevenFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagertwelve_fuzzer:McMotionManagerTwelveFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagerthirteen_fuzzer:McMotionManagerThirteenFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagerfourteen_fuzzer:McMotionManagerFourteenFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagerfifteen_fuzzer:McMotionManagerFifteenFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagersixteen_fuzzer:McMotionManagerSixteenFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagerseventeen_fuzzer:McMotionManagerSeventeenFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagereighteen_fuzzer:McMotionManagerEighteenFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagernineteen_fuzzer:McMotionManagerNineteenFuzzTest",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/mcmotionmanagertwenty_fuzzer:McMotionManagerTwentyFuzzTest",
  ]
}